@@ -71,6 +71,9 @@ us a note on ns-developers mailing list.</p>
       <li>Added attributes about the number of connection and data retransmission attempts.</li>
     </ul>
   </li>
+  <li> ns-3 is now capable of serializing SLL (a.k.a. cooked) headers. 
+       This is used in DCE to allow the generation of pcap directly readable by wireshark.
+  </li>
 </ul>
 <h2>Changes to build system:</h2>
 <ul>
